# adventofcode2024

./: .gitignore  CMakeLists.txt
src/: day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp
